--- a/package.json
+++ b/package.json
@@ -24,21 +24,52 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^9.1.10",
+    "@angular/common": "^9.1.10",
+    "@angular/compiler": "^9.1.10",
+    "@angular/core": "^9.1.10",
+    "@angular/forms": "^9.1.10",
+    "@angular/platform-browser": "^9.1.10",
+    "@angular/platform-browser-dynamic": "^9.1.10",
+    "@angular/router": "^9.1.10",
+    "@nestjs/common": "^7.1.3",
+    "@nestjs/core": "^7.1.3",
+    "@nestjs/platform-express": "^7.1.3",
+    "core-js": "^3.6.5",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.5",
+    "zone.js": "^0.10.3"
+  },
   "devDependencies": {
-    "@angular/cli": "9.1.0",
+    "@angular/cli": "9.1.7",
     "@nrwl/angular": "^9.3.0",
     "@nrwl/nest": "^9.3.0",
     "@nrwl/workspace": "9.3.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "eslint": "6.8.0",
-    "prettier": "2.0.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "@types/node": "~14.0.13",
+    "dotenv": "8.2.0",
+    "eslint": "7.2.0",
+    "prettier": "2.0.5",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.2",
+    "typescript": "~3.8.3",
+    "@nrwl/jest": "9.3.0",
+    "jest": "26.0.1",
+    "@types/jest": "26.0.0",
+    "ts-jest": "26.1.0",
+    "@nrwl/node": "9.3.0",
+    "@nestjs/schematics": "^7.0.1",
+    "@nestjs/testing": "^7.1.3",
+    "@angular/compiler-cli": "^9.1.10",
+    "@angular/language-service": "^9.1.10",
+    "@angular-devkit/build-angular": "0.901.7",
+    "codelyzer": "~5.2.2",
+    "jest-preset-angular": "8.2.0",
+    "cypress": "^4.8.0",
+    "@nrwl/cypress": "9.3.0"
   }
 }
