--- a/package.json
+++ b/package.json
@@ -40,36 +40,45 @@
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
+    "@nestjs/websockets": "^7.1.3",
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
     "core-js": "^3.6.5",
+    "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
+    "socketcluster-client": "^16.0.1",
+    "socketcluster-server": "^16.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.901.7",
     "@angular/cli": "9.1.7",
-    "@nrwl/angular": "^9.3.0",
-    "@nrwl/nest": "^9.3.0",
-    "@nrwl/workspace": "9.3.0",
-    "@types/node": "~14.0.13",
-    "dotenv": "8.2.0",
-    "eslint": "7.2.0",
-    "prettier": "2.0.5",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.2",
-    "typescript": "~3.8.3",
-    "@nrwl/jest": "9.3.0",
-    "jest": "26.0.1",
-    "@types/jest": "26.0.0",
-    "ts-jest": "26.1.0",
-    "@nrwl/node": "9.3.0",
-    "@nestjs/schematics": "^7.0.1",
-    "@nestjs/testing": "^7.1.3",
     "@angular/compiler-cli": "^9.1.10",
     "@angular/language-service": "^9.1.10",
-    "@angular-devkit/build-angular": "0.901.7",
+    "@nestjs/schematics": "^7.0.1",
+    "@nestjs/testing": "^7.1.3",
+    "@nrwl/angular": "^9.3.0",
+    "@nrwl/cypress": "9.3.0",
+    "@nrwl/jest": "9.3.0",
+    "@nrwl/nest": "^9.3.0",
+    "@nrwl/node": "9.3.0",
+    "@nrwl/workspace": "9.3.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/jest": "26.0.0",
+    "@types/mysql2": "github:types/mysql2",
+    "@types/node": "^14.0.13",
     "codelyzer": "~5.2.2",
-    "jest-preset-angular": "8.2.0",
     "cypress": "^4.8.0",
-    "@nrwl/cypress": "9.3.0"
+    "dotenv": "8.2.0",
+    "eslint": "7.2.0",
+    "jest": "26.0.1",
+    "jest-preset-angular": "8.2.0",
+    "prettier": "2.0.5",
+    "ts-jest": "26.1.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.2",
+    "typescript": "~3.8.3"
   }
 }
