--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/jest": "26.0.0",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^14.0.13",
+    "@types/socketcluster-server": "^15.0.1",
     "codelyzer": "~5.2.2",
     "cypress": "^4.8.0",
     "dotenv": "8.2.0",
