--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
+    "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
@@ -65,6 +66,7 @@
     "@nrwl/nest": "^9.3.0",
     "@nrwl/node": "9.3.0",
     "@nrwl/workspace": "9.3.0",
+    "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "26.0.0",
     "@types/mysql2": "github:types/mysql2",
