--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "^9.1.10",
     "@angular/router": "^9.1.10",
     "@nestjs/common": "^7.1.3",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
