--- a/libs/socketcluster/utils-crud-server/tsconfig.lib.json
+++ b/libs/socketcluster/utils-crud-server/tsconfig.lib.json
@@ -5,7 +5,9 @@
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "rootDir": "./src",
-    "types": ["node"]
+    "types": ["node"],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
