--- a/package.json
+++ b/package.json
@@ -52,7 +52,11 @@
     "rxjs": "^6.5.5",
     "socketcluster-client": "^16.0.1",
     "socketcluster-server": "^16.0.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.10.3",
+    "@ngrx/store": "9.1.0",
+    "@ngrx/effects": "9.1.0",
+    "@ngrx/entity": "9.1.0",
+    "@ngrx/router-store": "9.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.7",
@@ -61,6 +65,8 @@
     "@angular/language-service": "^9.1.10",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.1.3",
+    "@ngrx/schematics": "9.1.0",
+    "@ngrx/store-devtools": "9.1.0",
     "@nrwl/angular": "^9.3.0",
     "@nrwl/cypress": "9.3.0",
     "@nrwl/jest": "9.3.0",
@@ -72,6 +78,7 @@
     "@types/jest": "26.0.0",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^14.0.13",
+    "@types/socketcluster-client": "^15.1.2",
     "@types/socketcluster-server": "^15.0.1",
     "codelyzer": "~5.2.2",
     "cypress": "^4.8.0",
