--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ng": "ng",
     "nx": "nx",
     "start": "ng serve",
+    "start:front": "ng serve front",
+    "start:api": "ng serve api",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
