--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ng serve",
     "start:front": "ng serve front",
     "start:api": "ng serve api",
+    "start:only-db": "docker-compose -f db-docker-compose.yml up",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
