--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.10",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.10",
     "@angular/compiler": "^9.1.10",
     "@angular/core": "^9.1.10",
     "@angular/forms": "^9.1.10",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.10",
     "@angular/platform-browser-dynamic": "^9.1.10",
     "@angular/router": "^9.1.10",
@@ -45,21 +47,23 @@
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
+    "@ngrx/effects": "9.1.0",
+    "@ngrx/entity": "9.1.0",
+    "@ngrx/router-store": "9.1.0",
+    "@ngrx/store": "9.1.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "mysql2": "^2.1.0",
+    "normalize.css": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "socketcluster-client": "^16.0.1",
     "socketcluster-server": "^16.0.0",
-    "zone.js": "^0.10.3",
-    "@ngrx/store": "9.1.0",
-    "@ngrx/effects": "9.1.0",
-    "@ngrx/entity": "9.1.0",
-    "@ngrx/router-store": "9.1.0"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.7",
@@ -78,6 +82,7 @@
     "@nrwl/workspace": "9.3.0",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jest": "26.0.0",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^14.0.13",
