--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
+    "@ngneat/transloco": "^2.17.2",
     "@ngrx/effects": "9.1.0",
     "@ngrx/entity": "9.1.0",
     "@ngrx/router-store": "9.1.0",
