--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "nx": "nx",
     "start": "ng serve",
     "start:front": "ng serve front",
@@ -28,7 +28,7 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js",
     "stats:front": "webpack-bundle-analyzer dist/apps/front/stats-es2015.json"
   },
   "private": true,
@@ -78,12 +78,12 @@
     "@nestjs/testing": "^7.1.3",
     "@ngrx/schematics": "9.1.0",
     "@ngrx/store-devtools": "9.1.0",
-    "@nrwl/angular": "^9.3.0",
-    "@nrwl/cypress": "9.3.0",
-    "@nrwl/jest": "9.3.0",
-    "@nrwl/nest": "^9.3.0",
-    "@nrwl/node": "9.3.0",
-    "@nrwl/workspace": "9.3.0",
+    "@nrwl/angular": "^9.5.1",
+    "@nrwl/cypress": "9.5.1",
+    "@nrwl/jest": "9.5.1",
+    "@nrwl/nest": "^9.5.1",
+    "@nrwl/node": "9.5.1",
+    "@nrwl/workspace": "9.5.1",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
@@ -104,6 +104,7 @@
     "ts-node": "~8.10.2",
     "tslint": "~6.1.2",
     "typescript": "~3.8.3",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "eslint-plugin-cypress": "^2.10.3"
   }
 }
