--- a/package.json
+++ b/package.json
@@ -33,27 +33,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.10",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.10",
-    "@angular/compiler": "^9.1.10",
-    "@angular/core": "^9.1.10",
-    "@angular/forms": "^9.1.10",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.10",
-    "@angular/platform-browser-dynamic": "^9.1.10",
-    "@angular/router": "^9.1.10",
-    "@nestjs/common": "^7.1.3",
+    "@angular/animations": "^10.0.3",
+    "@angular/cdk": "^10.0.2",
+    "@angular/common": "^10.0.3",
+    "@angular/compiler": "^10.0.3",
+    "@angular/core": "^10.0.3",
+    "@angular/forms": "^10.0.3",
+    "@angular/material": "^10.0.2",
+    "@angular/platform-browser": "^10.0.3",
+    "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/router": "^10.0.3",
+    "@nestjs/common": "^7.3.2",
     "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.1.3",
-    "@nestjs/jwt": "^7.0.0",
-    "@nestjs/platform-express": "^7.1.3",
-    "@nestjs/websockets": "^7.1.3",
-    "@ngneat/transloco": "^2.17.2",
-    "@ngrx/effects": "9.1.0",
-    "@ngrx/entity": "9.1.0",
-    "@ngrx/router-store": "9.1.0",
-    "@ngrx/store": "9.1.0",
+    "@nestjs/core": "^7.3.2",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/websockets": "^7.3.2",
+    "@ngneat/transloco": "^2.17.5",
+    "@ngrx/effects": "9.2.0",
+    "@ngrx/entity": "9.2.0",
+    "@ngrx/router-store": "9.2.0",
+    "@ngrx/store": "9.2.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
@@ -64,20 +64,20 @@
     "mysql2": "^2.1.0",
     "normalize.css": "^8.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.0",
     "socketcluster-client": "^16.0.1",
     "socketcluster-server": "^16.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.7",
-    "@angular/cli": "9.1.7",
-    "@angular/compiler-cli": "^9.1.10",
-    "@angular/language-service": "^9.1.10",
+    "@angular-devkit/build-angular": "0.1000.2",
+    "@angular/cli": "10.0.2",
+    "@angular/compiler-cli": "^10.0.3",
+    "@angular/language-service": "^10.0.3",
     "@nestjs/schematics": "^7.0.1",
-    "@nestjs/testing": "^7.1.3",
-    "@ngrx/schematics": "9.1.0",
-    "@ngrx/store-devtools": "9.1.0",
+    "@nestjs/testing": "^7.3.2",
+    "@ngrx/schematics": "9.2.0",
+    "@ngrx/store-devtools": "9.2.0",
     "@nrwl/angular": "^9.5.1",
     "@nrwl/cypress": "9.5.1",
     "@nrwl/jest": "9.5.1",
@@ -87,24 +87,24 @@
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.7",
     "@types/jest": "26.0.0",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.0.13",
-    "@types/socketcluster-client": "^15.1.2",
+    "@types/node": "^14.0.23",
+    "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
     "codelyzer": "~5.2.2",
-    "cypress": "^4.8.0",
+    "cypress": "^4.10.0",
     "dotenv": "8.2.0",
     "eslint": "7.2.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "26.0.1",
     "jest-preset-angular": "8.2.0",
     "prettier": "2.0.5",
     "ts-jest": "26.1.0",
     "ts-node": "~8.10.2",
-    "tslint": "~6.1.2",
-    "typescript": "~3.8.3",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "eslint-plugin-cypress": "^2.10.3"
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.6",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
