--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "nx": "nx",
     "start": "ng serve",
     "start:front": "ng serve front",
@@ -28,18 +28,18 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js",
     "stats:front": "webpack-bundle-analyzer dist/apps/front/stats-es2015.json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.8",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "^10.0.8",
     "@angular/compiler": "^10.0.8",
     "@angular/core": "^10.0.8",
     "@angular/forms": "^10.0.8",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "^10.0.8",
     "@angular/platform-browser-dynamic": "^10.0.8",
     "@angular/router": "^10.0.8",
@@ -50,10 +50,10 @@
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
     "@ngneat/transloco": "^2.17.2",
-    "@ngrx/effects": "9.1.0",
-    "@ngrx/entity": "9.1.0",
-    "@ngrx/router-store": "9.1.0",
-    "@ngrx/store": "9.1.0",
+    "@ngrx/effects": "9.2.0",
+    "@ngrx/entity": "9.2.0",
+    "@ngrx/router-store": "9.2.0",
+    "@ngrx/store": "9.2.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
@@ -76,14 +76,14 @@
     "@angular/language-service": "^10.0.8",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.1.3",
-    "@ngrx/schematics": "9.1.0",
-    "@ngrx/store-devtools": "9.1.0",
-    "@nrwl/angular": "^9.3.0",
-    "@nrwl/cypress": "9.3.0",
-    "@nrwl/jest": "9.3.0",
-    "@nrwl/nest": "^9.3.0",
-    "@nrwl/node": "9.3.0",
-    "@nrwl/workspace": "9.3.0",
+    "@ngrx/schematics": "9.2.0",
+    "@ngrx/store-devtools": "9.2.0",
+    "@nrwl/angular": "^10.0.7",
+    "@nrwl/cypress": "10.0.7",
+    "@nrwl/jest": "10.0.7",
+    "@nrwl/nest": "^10.0.7",
+    "@nrwl/node": "10.0.7",
+    "@nrwl/workspace": "10.0.7",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
@@ -104,6 +104,7 @@
     "ts-node": "~8.10.2",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "eslint-plugin-cypress": "^2.10.3"
   }
 }
