--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -47,6 +47,9 @@
       "@chat-and-call/auth/shared": ["libs/auth/shared/src/index.ts"],
       "@chat-and-call/socketcluster/shared": [
         "libs/socketcluster/shared/src/index.ts"
+      ],
+      "@chat-and-call/contacts/feature-server-contacts": [
+        "libs/contacts/feature-server-contacts/src/index.ts"
       ]
     }
   },
