--- a/libs/utils/database-pool/tsconfig.lib.json
+++ b/libs/utils/database-pool/tsconfig.lib.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "../../../dist/out-tsc",
+    "rootDir": "./src",
     "declaration": true,
     "types": ["node"]
   },
