Refresh token on handshake

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nx": "nx",
     "start": "ng serve",
     "start:front": "ng serve front",
-    "start:front:network":  "ng serve front --host 0.0.0.0 --ssl",
+    "start:front:network": "ng serve front --host 0.0.0.0 --ssl",
     "start:api": "ng serve api",
     "start:only-db": "docker-compose -f db-docker-compose.yml up",
     "build": "ng build",
@@ -87,6 +87,7 @@
     "@nrwl/workspace": "10.0.7",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
     "@types/jest": "26.0.0",
