--- a/package.json
+++ b/package.json
@@ -34,31 +34,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.8",
-    "@angular/cdk": "^10.1.2",
-    "@angular/common": "^10.0.8",
-    "@angular/compiler": "^10.0.8",
-    "@angular/core": "^10.0.8",
-    "@angular/forms": "^10.0.8",
-    "@angular/material": "^10.1.2",
-    "@angular/platform-browser": "^10.0.8",
-    "@angular/platform-browser-dynamic": "^10.0.8",
-    "@angular/router": "^10.0.8",
-    "@nestjs/common": "^7.1.3",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.1.3",
-    "@nestjs/jwt": "^7.0.0",
-    "@nestjs/platform-express": "^7.1.3",
-    "@nestjs/websockets": "^7.1.3",
-    "@ngneat/transloco": "^2.17.2",
-    "@ngrx/effects": "9.2.0",
-    "@ngrx/entity": "9.2.0",
-    "@ngrx/router-store": "9.2.0",
-    "@ngrx/store": "9.2.0",
+    "@angular/animations": "11.0.3",
+    "@angular/cdk": "11.0.4",
+    "@angular/common": "11.0.3",
+    "@angular/compiler": "11.0.3",
+    "@angular/core": "11.0.3",
+    "@angular/forms": "11.0.3",
+    "@angular/material": "11.0.4",
+    "@angular/platform-browser": "11.0.3",
+    "@angular/platform-browser-dynamic": "11.0.3",
+    "@angular/router": "11.0.3",
+    "@nestjs/common": "7.6.5",
+    "@nestjs/config": "0.6.1",
+    "@nestjs/core": "7.6.5",
+    "@nestjs/jwt": "7.2.0",
+    "@nestjs/platform-express": "7.6.5",
+    "@nestjs/websockets": "7.6.5",
+    "@ngneat/transloco": "2.20.0",
+    "@ngrx/effects": "10.0.0",
+    "@ngrx/entity": "10.0.0",
+    "@ngrx/router-store": "10.0.0",
+    "@ngrx/store": "10.0.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "class-transformer": "0.3.2",
+    "class-validator": "0.13.1",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
@@ -68,45 +68,45 @@
     "rxjs": "^6.6.0",
     "socketcluster-client": "^16.0.1",
     "socketcluster-server": "^16.0.1",
-    "zone.js": "^0.10.3"
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1000.5",
-    "@angular/cli": "10.0.5",
-    "@angular/compiler-cli": "^10.0.8",
-    "@angular/language-service": "^10.0.8",
+    "@angular-devkit/build-angular": "0.1100.7",
+    "@angular/cli": "11.0.7",
+    "@angular/compiler-cli": "11.0.3",
+    "@angular/language-service": "11.0.3",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.1.3",
-    "@ngrx/schematics": "9.2.0",
-    "@ngrx/store-devtools": "9.2.0",
-    "@nrwl/angular": "^10.0.7",
-    "@nrwl/cypress": "10.0.7",
-    "@nrwl/jest": "10.0.7",
-    "@nrwl/nest": "^10.0.7",
-    "@nrwl/node": "10.0.7",
-    "@nrwl/workspace": "10.0.7",
+    "@ngrx/schematics": "10.0.0",
+    "@ngrx/store-devtools": "10.0.0",
+    "@nrwl/angular": "11.1.5",
+    "@nrwl/cypress": "11.1.5",
+    "@nrwl/jest": "11.1.5",
+    "@nrwl/nest": "11.1.5",
+    "@nrwl/node": "11.1.5",
+    "@nrwl/workspace": "11.1.5",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
-    "@types/jest": "26.0.0",
+    "@types/jest": "26.0.8",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.0.23",
+    "@types/node": "12.12.38",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
-    "codelyzer": "~5.2.2",
+    "codelyzer": "6.0.0",
     "cypress": "^4.10.0",
     "dotenv": "8.2.0",
-    "eslint": "7.2.0",
+    "eslint": "7.10.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.0.1",
-    "jest-preset-angular": "8.2.0",
-    "prettier": "2.0.5",
-    "ts-jest": "26.1.0",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.7",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
+    "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.0.5",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
