--- a/nx.json
+++ b/nx.json
@@ -2,10 +2,7 @@
   "npmScope": "chat-and-call",
   "implicitDependencies": {
     "angular.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tslint.json": "*",
     "nx.json": "*",
     "tsconfig.base.json": "*"
@@ -13,63 +10,27 @@
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "api": {
-      "tags": []
-    },
-    "front": {
-      "tags": []
-    },
-    "front-e2e": {
-      "tags": [],
-      "implicitDependencies": ["front"]
-    },
-    "utils-feature-gateway-explorer": {
-      "tags": []
-    },
-    "socketcluster-adapter": {
-      "tags": []
-    },
-    "socketcluster-utils-crud-server": {
-      "tags": []
-    },
-    "auth-data-access-auth-server": {
-      "tags": []
-    },
-    "utils-database-pool": {
-      "tags": []
-    },
-    "auth-feature-auth-web": {
-      "tags": []
-    },
-    "socketcluster-socket-client-web": {
-      "tags": []
-    },
-    "material-ui-material-design": {
-      "tags": []
-    },
-    "channels-data-access-server": {
-      "tags": []
-    },
-    "channels-shared": {
-      "tags": []
-    },
-    "auth-shared": {
-      "tags": []
-    },
-    "socketcluster-shared": {
-      "tags": []
-    },
-    "contacts-feature-server-contacts": {
-      "tags": []
-    }
+    "api": { "tags": [] },
+    "front": { "tags": [] },
+    "front-e2e": { "tags": [], "implicitDependencies": ["front"] },
+    "utils-feature-gateway-explorer": { "tags": [] },
+    "socketcluster-adapter": { "tags": [] },
+    "socketcluster-utils-crud-server": { "tags": [] },
+    "auth-data-access-auth-server": { "tags": [] },
+    "utils-database-pool": { "tags": [] },
+    "auth-feature-auth-web": { "tags": [] },
+    "socketcluster-socket-client-web": { "tags": [] },
+    "material-ui-material-design": { "tags": [] },
+    "channels-data-access-server": { "tags": [] },
+    "channels-shared": { "tags": [] },
+    "auth-shared": { "tags": [] },
+    "socketcluster-shared": { "tags": [] },
+    "contacts-feature-server-contacts": { "tags": [] },
+    "utils-forms-shared": { "tags": [] }
   },
-  "affected": {
-    "defaultBase": "master"
-  }
+  "affected": { "defaultBase": "master" }
 }
