analyze bundle size

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:api": "ng serve api",
     "start:only-db": "docker-compose -f db-docker-compose.yml up",
     "build": "ng build",
-    "build:front:prod": "ng build front --prod",
+    "build:front:prod": "ng build front --prod skip-nx-cache",
+    "build:front:prod:sourcemap": "ng build front --prod skip-nx-cache --source-map",
+    "bundle:front:report": "source-map-explorer dist/apps/front/**/*.js",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -105,6 +107,7 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
     "prettier": "2.2.1",
+    "source-map-explorer": "^2.5.2",
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
