--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@angular/platform-browser": "11.0.3",
     "@angular/platform-browser-dynamic": "11.0.3",
     "@angular/router": "11.0.3",
+    "@mikro-orm/core": "^4.4.2",
+    "@mikro-orm/mysql": "^4.4.2",
+    "@mikro-orm/nestjs": "^4.2.0",
     "@nestjs/common": "7.6.5",
     "@nestjs/config": "0.6.1",
     "@nestjs/core": "7.6.5",
