--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@ngrx/store-devtools": "10.0.0",
     "@nrwl/angular": "11.1.5",
     "@nrwl/cypress": "11.1.5",
+    "@nrwl/eslint-plugin-nx": "11.1.5",
     "@nrwl/jest": "11.1.5",
     "@nrwl/nest": "11.1.5",
     "@nrwl/node": "11.1.5",
@@ -102,10 +103,13 @@
     "@types/node": "12.12.38",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "6.0.0",
     "cypress": "^4.10.0",
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
