--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@types/node": "12.12.38",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "6.0.0",
