--- a/package.json
+++ b/package.json
@@ -37,62 +37,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.3",
-    "@angular/cdk": "11.0.4",
-    "@angular/common": "11.0.3",
-    "@angular/compiler": "11.0.3",
-    "@angular/core": "11.0.3",
-    "@angular/forms": "11.0.3",
-    "@angular/material": "11.0.4",
-    "@angular/platform-browser": "11.0.3",
-    "@angular/platform-browser-dynamic": "11.0.3",
-    "@angular/router": "11.0.3",
+    "@angular/animations": "11.1.2",
+    "@angular/cdk": "11.1.2",
+    "@angular/common": "11.1.2",
+    "@angular/compiler": "11.1.2",
+    "@angular/core": "11.1.2",
+    "@angular/forms": "11.1.2",
+    "@angular/material": "11.1.2",
+    "@angular/platform-browser": "11.1.2",
+    "@angular/platform-browser-dynamic": "11.1.2",
+    "@angular/router": "11.1.2",
     "@mikro-orm/core": "^4.4.2",
     "@mikro-orm/mysql": "^4.4.2",
     "@mikro-orm/nestjs": "^4.2.0",
-    "@nestjs/common": "7.6.5",
-    "@nestjs/config": "0.6.1",
-    "@nestjs/core": "7.6.5",
+    "@nestjs/common": "7.6.11",
+    "@nestjs/config": "0.6.3",
+    "@nestjs/core": "7.6.11",
     "@nestjs/jwt": "7.2.0",
-    "@nestjs/platform-express": "7.6.5",
-    "@nestjs/websockets": "7.6.5",
+    "@nestjs/platform-express": "7.6.11",
+    "@nestjs/websockets": "7.6.11",
     "@ngneat/transloco": "2.20.0",
-    "@ngrx/effects": "10.0.0",
-    "@ngrx/entity": "10.0.0",
-    "@ngrx/router-store": "10.0.0",
-    "@ngrx/store": "10.0.0",
+    "@ngrx/effects": "10.1.2",
+    "@ngrx/entity": "10.1.2",
+    "@ngrx/router-store": "10.1.2",
+    "@ngrx/store": "10.1.2",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "0.3.2",
     "class-validator": "0.13.1",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
-    "core-js": "^3.6.5",
-    "mysql2": "^2.1.0",
+    "core-js": "3.8.3",
+    "mysql2": "^2.2.5",
     "normalize.css": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0",
-    "socketcluster-client": "^16.0.1",
+    "socketcluster-client": "16.0.2",
     "socketcluster-server": "^16.0.1",
     "tslib": "^2.0.0",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.7",
-    "@angular/cli": "11.0.7",
-    "@angular/compiler-cli": "11.0.3",
-    "@angular/language-service": "11.0.3",
+    "@angular-devkit/build-angular": "0.1101.4",
+    "@angular/cli": "11.1.4",
+    "@angular/compiler-cli": "11.1.2",
+    "@angular/language-service": "11.1.2",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.1.3",
     "@ngrx/schematics": "10.0.0",
     "@ngrx/store-devtools": "10.0.0",
-    "@nrwl/angular": "11.1.5",
-    "@nrwl/cypress": "11.1.5",
-    "@nrwl/eslint-plugin-nx": "11.1.5",
-    "@nrwl/jest": "11.1.5",
-    "@nrwl/nest": "11.1.5",
-    "@nrwl/node": "11.1.5",
-    "@nrwl/workspace": "11.1.5",
+    "@nrwl/angular": "11.2.10",
+    "@nrwl/cypress": "11.2.10",
+    "@nrwl/eslint-plugin-nx": "11.2.10",
+    "@nrwl/jest": "11.2.10",
+    "@nrwl/nest": "11.2.10",
+    "@nrwl/node": "11.2.10",
+    "@nrwl/workspace": "11.2.10",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
@@ -111,15 +111,14 @@
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "^2.11.2",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
+    "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
     "source-map-explorer": "^2.5.2",
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.5",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "typescript": "4.0.5"
   }
 }
